docs/version-1.12/modules/en/pages/volumes/containerized-data-importer.adoc
= {longhorn-product-name} with CDI Imports
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-08-20
:page-revdate: {revdate}
:current-version: {page-component-version}

This document explains how to use the https://github.com/kubevirt/containerized-data-importer[Containerized Data Importer (CDI)] to import Raw or QCOW2 images into {longhorn-product-name}. It describes the workflow for creating a reusable *Golden Image* and provisioning multiple workloads from it by using CSI Volume Cloning.

== Overview

In Kubernetes environments that require pre-populated disk images, CDI enables importing external images into {longhorn-product-name}-backed PersistentVolumeClaims (PVCs). These PVCs serve as reusable Golden Images for provisioning subsequent workloads.

Technically, the Golden Image acts as a *Base Image PVC*. {longhorn-product-name} implements this by using CSI Volume Cloning, which creates a *full, independent copy* for each new claim. This approach ensures complete data isolation. Each workload receives its own writable volume, and the original Golden Image remains unchanged and independent of the clones at runtime.

== Workflow

. *Import*: CDI pulls an image from an external source (HTTP, S3, or a container registry) and populates a {longhorn-product-name}-backed PVC.
. *Protect*: This PVC functions as the Golden Image. It is recommended to treat this PVC as *read-only* or immutable to ensure consistency for future clones.
. *Clone*: Workloads create new PVCs that reference the base image as their `dataSource`. {longhorn-product-name} copies the data from the base image to the new volume.

=== Creating a Base Image PVC

A DataVolume manifest specifies the source image and the Longhorn storage class. For example, the following manifest imports a QCOW2 image by using HTTP:

[,yaml]
----
apiVersion: cdi.kubevirt.io/v1beta1
kind: DataVolume
metadata:
  name: golden-base-image
spec:
  source:
    http:
      url: "https://example.com/images/base-image.qcow2"
  pvc:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 10Gi
    storageClassName: longhorn
----

After creation, CDI handles the image import and conversion. The result is a {longhorn-product-name}-backed PVC that acts as the base image. It is recommended to treat this PVC as immutable and avoid direct writes from workloads.

=== Cloning Base Images

Cloning a base image PVC in {longhorn-product-name} is performed in full copy mode. This creates a complete, independent copy of the base image for each cloned PVC. Each workload therefore has its own isolated volume and does not rely on the base image for runtime operations.

The following example shows how to create a cloned PVC:

[,yaml]
----
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: cloned-pvc-1
spec:
  dataSource:
    name: golden-base-image
    kind: PersistentVolumeClaim
    apiGroup: ""
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 10Gi
  storageClassName: longhorn
----

You can create multiple clones from the same base image. Each clone is a full, independent copy that ensures workload isolation.

== Volume Migration using CDI

Containerized Data Importer (CDI) is the standard and preferred method for data migration. You can use CDI to migrate volumes from other (non-{longhorn-product-name}) storage systems into {longhorn-product-name}, or to perform offline volume migrations between {longhorn-product-name} data engines (for example, migrating from the V1 Data Engine to the V2 Data Engine).

=== Migration Procedure

The following guide demonstrates how to migrate data from a Longhorn V1 volume to a Longhorn V2 volume (SPDK/NVMe-oF) using CDI. The same exact procedure applies when migrating from an external storage system's StorageClass into a Longhorn StorageClass.

==== 1. Prerequisites

Before starting the migration process, ensure the following requirements are met:

1. *CDI Installed*: Ensure Containerized Data Importer (CDI) is installed and running in your Kubernetes cluster.
2. *Target StorageClass*: Verify that your target StorageClass is available. For a V1 to V2 migration, verify that a StorageClass configured for the Longhorn V2 Data Engine (`dataEngine: v2`) is available (for example, `longhorn-v2`).
3. *Scale Down Workload*: Scale down your application's Deployment, StatefulSet, or Pod to `0` replicas to detach the source PVC. *This step is critical to prevent `Multi-Attach` (RWO) volume conflicts during cloning.*

==== 2. Create the DataVolume Manifest

Create a `DataVolume` custom resource (CR) specifying your existing PVC as the source and your target StorageClass for the new PVC.

[,yaml]
----
apiVersion: cdi.kubevirt.io/v1beta1
kind: DataVolume
metadata:
  name: app-data-v2
  namespace: default
spec:
  source:
    pvc:
      name: app-data-v1 # Existing source PVC (e.g., Longhorn V1 or external storage)
      namespace: default
  pvc:
    storageClassName: longhorn-v2 # Target StorageClass
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 20Gi # Must be equal to or greater than the source size
----

==== 3. Apply Manifest and Monitor Migration

Apply the `DataVolume` resource and monitor the cloning progress:

[,bash]
----
kubectl apply -f datavolume.yaml
kubectl get dv app-data-v2 -n default -w
----

Wait until the `PHASE` displays *`Succeeded`* and `PROGRESS` reaches *`100.0%`*.

==== 4. Reattach Workload to New PVC

Once completed, CDI generates a target PVC named `app-data-v2`. Update your application's workload manifest to reference this new PVC, then scale your application back up.

[,yaml]
----
volumes:
  - name: storage-volume
    persistentVolumeClaim:
      claimName: app-data-v2
----

== References

* https://github.com/kubevirt/containerized-data-importer[Containerized Data Importer]
